Ticket 804: Fixes text overflow in stations properties svg (#929)
Text in svg in stations properties modal will now be truncated if it is longer than the rectangle it is rendered in. When hovering over a rectangle, a tooltip shows the entire text content.

Ticket #804

--- a/src/material-style.scss
+++ b/src/material-style.scss
@@ -2,6 +2,8 @@
 
 .mat-tooltip {
     font-size: 14px !important;
+    white-space: pre-line;
+    word-break: break-word;
 }
 
 .mat-toolbar {
